[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://AdventureMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://MenuManager.gd" type="Script" id=3]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Main Menu" parent="." instance=ExtResource( 1 )]

[node name="AdventureMenu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="goto_adventure" from="Main Menu" to="." method="_on_Main_Menu_goto_adventure"]
[connection signal="goto_mainmenu" from="AdventureMenu" to="." method="_on_AdventureMenu_goto_mainmenu"]
